// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing the DeleteActivity component should appear the error 'Id is required' 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
      >
        <div>
          <label
            for="id"
          >
            Id
          </label>
          <input
            data-testid="id-field-delete-activity"
            id="id"
            name="id"
            patterm="[0-9]*"
            placeholder="Id"
            type="text"
            value=""
          />
        </div>
        <input
          data-testid="delete-button-delete-activity"
          type="submit"
          value="Delete"
        />
        <p>
          Id is required
        </p>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
    >
      <div>
        <label
          for="id"
        >
          Id
        </label>
        <input
          data-testid="id-field-delete-activity"
          id="id"
          name="id"
          patterm="[0-9]*"
          placeholder="Id"
          type="text"
          value=""
        />
      </div>
      <input
        data-testid="delete-button-delete-activity"
        type="submit"
        value="Delete"
      />
      <p>
        Id is required
      </p>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`testing the DeleteActivity component should delete the only activity that exists 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
      >
        <div>
          <label
            for="id"
          >
            Id
          </label>
          <input
            data-testid="id-field-delete-activity"
            id="id"
            name="id"
            patterm="[0-9]*"
            placeholder="Id"
            type="text"
            value="1"
          />
        </div>
        <input
          data-testid="delete-button-delete-activity"
          type="submit"
          value="Delete"
        />
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
    >
      <div>
        <label
          for="id"
        >
          Id
        </label>
        <input
          data-testid="id-field-delete-activity"
          id="id"
          name="id"
          patterm="[0-9]*"
          placeholder="Id"
          type="text"
          value="1"
        />
      </div>
      <input
        data-testid="delete-button-delete-activity"
        type="submit"
        value="Delete"
      />
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`testing the DeleteActivity component shouldn't call the deleteActivity action for a not existing id 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
      >
        <div>
          <label
            for="id"
          >
            Id
          </label>
          <input
            data-testid="id-field-delete-activity"
            id="id"
            name="id"
            patterm="[0-9]*"
            placeholder="Id"
            type="text"
            value="13"
          />
        </div>
        <input
          data-testid="delete-button-delete-activity"
          type="submit"
          value="Delete"
        />
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
    >
      <div>
        <label
          for="id"
        >
          Id
        </label>
        <input
          data-testid="id-field-delete-activity"
          id="id"
          name="id"
          patterm="[0-9]*"
          placeholder="Id"
          type="text"
          value="13"
        />
      </div>
      <input
        data-testid="delete-button-delete-activity"
        type="submit"
        value="Delete"
      />
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
